style: fix width of anonymous icon used in changelog for users without gravatar - align it with gravatar icons

--- a/kallithea/front-end/style.less
+++ b/kallithea/front-end/style.less
@@ -856,6 +856,9 @@ div.comment-prev-next-links div.next-comment {
         .hidden;
       }
     }
+    > .icon-user::before {
+      margin: 0;
+    }
   }
   .hash {
     .small;
